--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,42 @@ body {
   color: var(--secondary-color);
 }
 
+/* NAVIGATION */
+
+.nav-link:link,
+.nav-link:visited,
+.nav-link:active {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--title-color);
+}
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--accent-color);
+}
+
+.nav-item > .current-page {
+  color: var(--accent-color);
+}
+
+/* CONTACTS */
+
+.header-contact:link,
+.header-contact:visited,
+.header-contact:active {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-color);
+}
+.header-contact:hover,
+.header-contact:focus {
+  color: var(--accent-color);
+}
+
 /* ---------SECTIONS--------- */
 
 /* HERO */
@@ -103,7 +139,8 @@ body {
   border-radius: 4px;
 }
 
-.hero-button:hover {
+.hero-button:hover,
+.hero-button:focus {
   background-color: #188ce8;
 }
 
@@ -188,7 +225,8 @@ body {
   letter-spacing: 0.03em;
 }
 
-.filter-button:hover {
+.filter-button:hover,
+.filter-button:focus {
   background-color: var(--accent-color);
   color: var(--secondary-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -213,8 +251,44 @@ body {
   letter-spacing: 0.03em;
 }
 
+.card-link:link,
+.card-link:visited,
+.card-link:active,
+.card-link:hover,
+.card-link:focus {
+  color: inherit;
+}
+
 /* ---------FOOTER--------- */
 
 .page-footer {
   background-color: var(--primary-background-color);
+}
+
+/* ADDRESS */
+
+.contact-address:link,
+.contact-address:visited,
+.contact-address:active {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+}
+.contact-address:hover,
+.contact-address:focus {
+  color: var(--accent-color);
+}
+
+.footer-contact:link,
+.footer-contact:visited,
+.footer-contact:active {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-contact:hover,
+.footer-contact:focus {
+  color: var(--accent-color);
 }
