--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@
   --accent-color: #2196f3;
   --primary-background-color: #2f303a;
   --secondary-background-color: #f5f4fa;
+  --header-logo-color: #000000;
+  --footer-contact-color: rgba(255, 255, 255, 0.6);
+  --hero-hover-btn-color: #188ce8;
 }
 
 /* ---------UTILITY--------- */
@@ -12,6 +15,10 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--primary-color);
+  background-color: var(--secondary-color);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 .link {
@@ -49,17 +56,12 @@ body {
 }
 /* ---------HEADER--------- */
 
-.page-header {
-  background-color: var(--secondary-color);
-}
-
 /* LOGO */
 
 .logo {
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-size: 26px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
   color: var(--accent-color);
 }
 
@@ -68,7 +70,7 @@ body {
 }
 
 .logo-header {
-  color: #000000;
+  color: var(--header-logo-color);
 }
 
 .logo-footer {
@@ -81,7 +83,6 @@ body {
 .nav-link:visited,
 .nav-link:active {
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-color);
@@ -101,7 +102,6 @@ body {
 .header-contact:visited,
 .header-contact:active {
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-color);
@@ -141,34 +141,19 @@ body {
 
 .hero-button:hover,
 .hero-button:focus {
-  background-color: #188ce8;
+  background-color: var(--hero-hover-btn-color);
 }
 
 /* FEATURES */
-
-.features {
-  background-color: var(--secondary-color);
-}
 
 .features-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
-.features-text {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-
 /* OUR WORKS */
-
-.our-works {
-  background-color: var(--secondary-color);
-}
 
 .works-title {
   font-weight: 700;
@@ -207,14 +192,9 @@ body {
 .teammate-position {
   font-size: 16px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
 }
 
 /* PORTFOLIO */
-
-.portfolio {
-  background-color: var(--secondary-color);
-}
 
 .filter-button {
   background-color: var(--secondary-background-color);
@@ -222,7 +202,6 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
-  letter-spacing: 0.03em;
 }
 
 .filter-button:hover,
@@ -235,7 +214,6 @@ body {
 
 .card {
   background-color: var(--secondary-color);
-  border: 1px solid #eeeeee;
 }
 
 .card-title {
@@ -248,7 +226,6 @@ body {
 .card-subtitle {
   font-size: 16px;
   line-height: 1.88;
-  letter-spacing: 0.03em;
 }
 
 .card-link:link,
@@ -270,9 +247,6 @@ body {
 .contact-address:link,
 .contact-address:visited,
 .contact-address:active {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
   color: var(--secondary-color);
 }
 .contact-address:hover,
@@ -283,10 +257,7 @@ body {
 .footer-contact:link,
 .footer-contact:visited,
 .footer-contact:active {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--footer-contact-color);
 }
 .footer-contact:hover,
 .footer-contact:focus {
